//
//  AccessibilityIDs.swift
//  Posts
//
//  Created by Xinghou Liu on 01/04/2019.
//  Copyright © 2019 Xmart Soft Ltd. All rights reserved.
//

import Foundation

public enum AccessibilityIDs {
    public static let mainTableView = "main.tableView"
    public static let mainTableViewCell = "main.tableView.cell"
    
    public static let detailsTitle = "details.title"
    public static let detailsBody = "details.body"
    public static let detailsAuthor = "details.author"
    public static let detailsComment = "details.comment"
    
    public static let spinner = "spinner"
    public static let spinnerMask = "spinnerMask"
    
    public static let backButton = "button.back"
}
