//
//  Texts.swift
//  Posts
//
//  Created by Xinghou Liu on 02/04/2019.
//  Copyright © 2019 Xmart Soft Ltd. All rights reserved.
//

import Foundation

public enum Texts {
    public enum ViewTitles {
        public static let posts = "Posts"
        public static let postDetails = "Details"
        public static let error = "Error"
    }
    
    public enum ButtonTitles {
        public static let ok = "OK"
        public static let cancel = "Cancel"
        public static let retry = "Retry"
    }
}


